apps/obsidian-livesync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-https@kubernetescrd
  name: obsidian-livesync-ingress
  namespace: obsidian-livesync
spec:
  rules:
    - host: ENC[AES256_GCM,data:DnQAALT2gmx6oinHApVtggvyiD329vk0HZV0qcLs2Dg8f6mGXA==,iv:opqPYxZvMuaIsMay2WjkTKBAyVNfNe1Oaeq36UGYn+4=,tag:RKLZMZ5d5x84VnJ+lh6s7g==,type:str]
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: obsidian-livesync-svc
                port:
                  number: 5984
  tls:
    - hosts:
        - ENC[AES256_GCM,data:2ImcnX9HF/++NJ59BPxvKNmasdJMLWRoVrXlxtLzhV+ZTxgHMw==,iv:dY38LjOi+h5Aua5vB1Rve5jxpFzCIGMWTkL/kyUfUCs=,tag:yRvUHT87dp62CWPD7fRgxg==,type:str]
      secretName: obsidian-livesync-cert
sops:
  lastmodified: "2026-04-21T13:38:31Z"
  mac: ENC[AES256_GCM,data:+FQZznnofvSskzLVpzA9kvrP7XTxz8viKNzV14lCfNT1NibBdJ9wB0H/TbM1QLMGKhKQcXea1DeQ/iW8PIXpe+1wHfdxAqeU654gZei/M9jkXTWNUP+BWfY/X4AQeYY98OpQPoP3sxGi35cd001ao0txz2IdGR29X9DyDEUK6K8=,iv:GHeXKJPTnsVSUCfPupQIcIcDGReguHBh2bO6hAK2sTM=,tag:8b3+IAyeuZQ5hpPr85lskg==,type:str]
  pgp:
    - created_at: "2026-04-21T13:38:31Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        hQIMA1R72LzcpgpmARAAo1ADcODbRD6y8ds+3fBVVCF0Dlec91Baoy6Vrw7GxTat
[...]
        29XBFC5d4Ds/bkb56Ix4aWni7XyE9y59NMiMXiQYb7oqLw==
        =1WDl
        -----END PGP MESSAGE-----
      fp: 08083A92DBB719D2E10998259B44720A645D6802
  encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
  version: 3.12.2
